# sample-media-qmlvideo

./: CMakeLists.txt  README.md  main.cpp  main.qml
assets/: debug.args  debug.env
cmake/: WebOS-SDK.cmake
scripts/: device-launch.sh
webos-metadata/: appinfo.json
